[gd_scene load_steps=6 format=3 uid="uid://cgf57n5pwpywf"]

[ext_resource type="PackedScene" uid="uid://0mvk1fobbefx" path="res://scenes/slot.tscn" id="1_q4qjv"]
[ext_resource type="Script" path="res://scripts/request.gd" id="1_ro1ue"]
[ext_resource type="PackedScene" uid="uid://ce4txtp5sdg6e" path="res://scenes/clickable_text.tscn" id="3_ympxi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t8gjn"]
albedo_color = Color(0.262932, 0.262932, 0.262932, 1)

[sub_resource type="BoxMesh" id="BoxMesh_5ijtw"]
size = Vector3(3, 0.1, 3.5)

[node name="Request" type="Node3D"]
script = ExtResource("1_ro1ue")

[node name="Background" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_t8gjn")
mesh = SubResource("BoxMesh_5ijtw")
skeleton = NodePath("../..")

[node name="TurnInSlot" parent="Background" instance=ExtResource("1_q4qjv")]
transform = Transform3D(1.2, 0, 0, 0, 0.02, 0, 0, 0, 1.7, -0.75, 0.05, 0.75)
category = 2

[node name="TitleLabel" type="Label3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.06, -1.5)
text = "Request
"
font_size = 60
outline_size = 10

[node name="RequestLabel" type="Label3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.37722, 0.06, -0.994906)
text = "Health Potion
"
font_size = 50
outline_size = 10
horizontal_alignment = 0

[node name="RewardLabel" type="Label3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.36901, 0.06, -0.542523)
text = "Reward: x Gold"
font_size = 50
outline_size = 10
horizontal_alignment = 0

[node name="ClickableText" parent="Background" instance=ExtResource("3_ympxi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.81964, 0.06, 1.4749)
